Refactor and inrease test coverage for Trie.